0022969: Wrong confusion in BRepLib_MakeEdge